# miniAutoGen

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Untitled-1.ipynb  agent.py  chat.py  chatadmin.py  claude.md  docker-compose.yml  groupchat.py  groupchatadmin.py  prompt_manager.py  promtp.md  pyproject.toml  requeriments.txt  resumo.md  setup.py  test.ipynb  teste.ipynb
.claude/commands/: spec-create.md  spec-plan.md  spec-tasks.md
.github/: copilot-instructions.md  gemini.md
.github/workflows/: ci.yml
.specs/: agent-driver-protocol.md  agent-runtime-compositor.md  analysis-5-frameworks-one-pattern.md  analysis-bit-office-vs-miniautogen.md  analysis-competitors-deep-dive.md  analysis-open-swe.md  api-facade.md  docs-alignment-audit.md  end-to-end-wiring.md  graceful-cancel-checkpoint.md  local-endpoint-credentials.md  per-agent-timeouts.md  plan-agent-runtime-compositor.md  plan-end-to-end-wiring.md  plan-graceful-cancel-checkpoint.md  plan-local-endpoint-credentials.md  plan-per-agent-timeouts.md  plan-rich-live-cli-runner.md  plan-template.md  rich-live-cli-runner.md  tasks-graceful-cancel-checkpoint.md  tasks-local-endpoint-credentials.md  tasks-per-agent-timeouts.md  tasks-rich-live-cli-runner.md  tasks-template.md  template.md  tui-ux-sprint1.md
.specs/015-team-runtime/: plan.md  spec.md
.specs/016-team-task-list/: plan.md  spec.md
.specs/017-team-mailbox/: plan.md  spec.md
.specs/_backlog/: README.md  mcp-server.md  plan-mcp-server.md  tasks-mcp-server.md
Projeto/: .gitignore  miniautogen.yaml
Projeto/memory/: profiles.yaml
Projeto/pipelines/: main.py
chat/: conversa.csv  conversa_ativa.csv  estado_chat.json
console/: CLAUDE.md  package-lock.json  package.json  vitest.config.ts
docs/: SOA.md  agent-frameworks-research-2026.md  agent.md  architecture-retrospective.md  architecture.md  competitive-landscape.md  components.md  coordenacao.md  critical-analysis-2026-03-21.md  dx-agent-environment.md  dx-comparison-noviuz.md  groupchat.md  groupchatadmin.md  melhorias.md  pipelines.md  prompt_gerar_template.md  quickstart.md
docs/agents/: arquitetura.md
docs/analysis/: competitive-analysis-2026-03-26.md  dx-improvement-plan-2026-03-26.md
docs/archive/: dx-comparison-noviuz.md
docs/assets/: rich-live-demo.html  rich-live-demo.tape
docs/eng/: agent.md  chat.md  chat_admin.md  chatpipelinestate.md  components.md  contribute.md  coordination.md  gitflow.md  llm_client.md  multi_agent_chats.md  pipeline.md  tools.md
docs/plans/: 2026-03-12-miniautogen-architecture-execution.md  2026-03-12-miniautogen-master-plan.md  2026-03-12-miniautogen-new-architecture-mvp.md  2026-03-12-miniautogen-wave-1-foundation.md  2026-03-12-miniautogen-wave-2-runtime-compat.md  2026-03-12-miniautogen-wave-3-adapters-stores.md  2026-03-12-miniautogen-wave-4-events-policies-hardening.md  2026-03-14-miniautogen-production-readiness.md  2026-03-16-100-percent-alignment.md  2026-03-17-m2-chunk2-check.md  (+31 more)
examples/: async_chat_example.py  tui_demo.py
exemples/: Jinja2SingleTemplateComponent.ipynb  Jinja2TemplatesComponent.ipynb  Jinja2TemplatesMovie.ipynb  chat.md  chat1.md  chat2.md  chat3.md  chat4.md  chat_movie.md  jinja_component.ipynb  openai_assistent.ipynb  test.ipynb  tool_usage_example.ipynb
gemini_cli_gateway/: __init__.py  app.py  models.py  prompt_builder.py  runner.py  service.py
groupchat_data/: groupchat.db
miniautogen/: CLAUDE.md  __init__.py  __main__.py  _json.py  api.py  schemas.py
pipeline/: components.py  pipeline.py
scripts/: check_arch.py  rich_live_demo.py  test_lead_agent.py
storage/: chatstorage.py
tests/: CLAUDE.md  conftest.py  test_agent.py  test_api_exports.py  test_core.py  test_pipeline_components.py  test_skill_scripts.py  test_sqlalchemy_stores.py
v2/: groupchatadmin.py  test.ipynb
(+885 files in other folders)
