[tool.poetry]
name = "miniautogen"
version = "0.1.0"
description = "Lightweight and flexible library for creating multi-agent agents and conversations."
authors = ["Bruno Capelão <brcapelao@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.12"
openai = ">=1.3.9"
python-dotenv = "1.0.0"
sqlalchemy = ">=2.0.23"
litellm = ">=1.16.12"
pydantic = ">=2.5.0"
aiosqlite = ">=0.19.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.28.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
