[project]
name = "miniautogen"
version = "0.1.0"
description = "Lightweight and flexible library for creating multi-agent agents and conversations."
authors = [{name = "Bruno Capelao", email = "brcapelao@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=1.3.9",
    "python-dotenv==1.0.0",
    "sqlalchemy>=2.0.23",
    "litellm>=1.16.12",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "anyio>=4.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18.0",
    "orjson>=3.10.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
tui = ["textual>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
google = ["google-genai>=1.0.0"]
all-providers = ["openai>=1.3.9", "anthropic>=0.40.0", "google-genai>=1.0.0"]
all = ["textual>=1.0.0", "openai>=1.3.9", "anthropic>=0.40.0", "google-genai>=1.0.0"]

[project.scripts]
miniautogen = "miniautogen.cli.main:cli"

[dependency-groups]
dev = [
    "ipykernel==6.28.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "mypy>=1.9.0",
    "hypothesis>=6.130.0",
    "deepdiff>=7.0.0,<9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "litellm",
    "litellm.*",
    "openai",
    "openai.*",
    "torch",
    "torch.*",
]
follow_imports = "skip"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
